<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jianzj</groupId>
    <artifactId>ticket-service-all</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <developers>
        <developer>
            <name>JianZJ</name>
            <email>2279814184@qq.com</email>
            <url>https://github.com/JianZJ-75/ticket-service</url>
        </developer>
    </developers>

    <modules>
        <module>dependencies</module>
        <module>frameworks</module>
        <module>services</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <spotless-maven-plugin.version>2.22.1</spotless-maven-plugin.version>
        <skip.checkstyle.check>true</skip.checkstyle.check>
        <maven-common-plugin.version>3.1.0</maven-common-plugin.version>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>
        <lombok.version>1.18.30</lombok.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.jianzj</groupId>
                <artifactId>ticket-service-dependencies</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!--打包插件-->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${maven-common-plugin.version}</version>
                <configuration>
                    <!--在打包时排除 Lombok 依赖，因为 Lombok 在编译时起作用，运行时不需要其依赖。-->
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!--编译java-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <!--maven的test生命周期跳过测试-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-common-plugin.version}</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <!--maven的integration-test和verify生命周期跳过测试-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-common-plugin.version}</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <!--checkstyle代码检查-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-common-plugin.version}</version>
                <configuration>
                    <configLocation>${maven.multiModuleProjectDirectory}/checkstyle/ticket_service_checkstyle.xml
                    </configLocation>
                    <suppressionsLocation>
                        ${maven.multiModuleProjectDirectory}/checkstyle/ticket_service_checkstyle_suppression.xml
                    </suppressionsLocation>
                    <includeTestSourceDirectory>false</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <encoding>UTF-8</encoding>
                    <skip>${skip.checkstyle.check}</skip>
                    <violationSeverity>error</violationSeverity>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>checkstyle</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--spotless格式化代码-->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless-maven-plugin.version}</version>
                <configuration>
                    <java>
                        <eclipse>
                            <file>${maven.multiModuleProjectDirectory}/format/ticket_service_spotless_formatter.xml</file>
                        </eclipse>
                        <!--<licenseHeader>
                            <file>${maven.multiModuleProjectDirectory}/format/ticket_service_licenseHeader.txt</file>
                        </licenseHeader>-->
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
